apt-listchanges (2.37) unstable; urgency=low

  * Fix urgency sorting (forgot to commit this for 2.36)
  * Fix a few small buglets (--which option and headers mode) from 2.36's
    reorg, spotted by Joe Drew
  * Add a bit about NEWS.Debian to the man page, courtesy of Joe Drew
  * Update man page to reflect /usr/share/doc as the standard location for
    the changelog

 -- Matt Zimmerman <mdz@debian.org>  Mon,  7 Jul 2003 19:12:02 -0400

apt-listchanges (2.36) unstable; urgency=low

  * Refactor lots of code, with many tangible benefits
    - Make only a single pass through the deb, extracting all files we
      might be interested in, no matter how many different files we are
      interested in.  This makes searching for NEWS.Debian free, and speeds
      up processing of packages with only native changelogs (no
      changelog.Debian
    - OOPify several interfaces
    - Use the gzip module rather than forking zcat (faster and cleaner)
  * Add 'which' option to specify whether news, changelogs or both should
    be displayed.  This is still very primitive and everything is
    concatenated together.
  * Simplify urgency sorting
  * Remove import from __future__ which is unnecessary now that we require
    python 2.2 anyway

 -- Matt Zimmerman <mdz@debian.org>  Mon,  7 Jul 2003 01:31:03 -0400

apt-listchanges (2.35) unstable; urgency=low

  * Experimental NEWS.Debian support, based on a patch from Joe Drew.
    NEWS.Debian has the same format as changelog.  Currently the only
    difference is that the NEWS.Debian entries for all packages are
    displayed ahead of any changelog entries.  In the future, there will
    likely be an option to display only NEWS entries and skip changelogs,
    and different frontends will be able to display the news differently
    (Closes: #192089)

 -- Matt Zimmerman <mdz@debian.org>  Wed,  2 Jul 2003 23:44:39 -0400

apt-listchanges (2.34) unstable; urgency=low

  * "Abort abort abort!"