@@ -13,8 +13,8 @@ install: all
 		$(DESTDIR)/etc/apt/apt.conf.d/20listchanges
 	install -d $(DESTDIR)/usr/share/man/man1
 	install -m 644 apt-listchanges.1 $(DESTDIR)/usr/share/man/man1
-	install -d $(DESTDIR)/usr/lib/apt-listchanges
-	install -m 755 browser-pipe $(DESTDIR)/usr/lib/apt-listchanges
+	install -d $(DESTDIR)/usr/share/apt-listchanges
+	install -m 755 browser-pipe $(DESTDIR)/usr/share/apt-listchanges
 	$(MAKE) -C po install
 
 clean:
